<resources>
    <string name="app_name">MicroGIS Tracker</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_micro_gis">MicroGIS Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="info">INFO</string>
    <string name="groups">GROUPS</string>
    <string name="objects">OBJECTS</string>
    <string name="drivers">DRIVER</string>
    <string name="sensors">SENSORS</string>
    <string name="my_tracks">MY TRACKS</string>
    <string name="app_setting">SETTINGS</string>
    <string name="my_place">MY POINT</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="server_setting_title">Tracker</string>
    <string name="filters">Filters</string>
    <string name="sending_to_server">Sending to server:</string>
    <string name="sensor_name_settings">Sensors name</string>
    <string name="server_monitoring">Groups</string>
    <string name="additional_settings">Options</string>
    <string name="server_field">Server:</string>
    <string name="port_field">Port:</string>
    <string name="time_period_field">Time period(sec):</string>
    <string name="distance_field">Distance(meters):</string>
    <string name="andle_field">Angle(deg):</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="deleting_track">Deleting track</string>
    <string name="deletig_marker">Deleting marker?</string>
    <string name="delete">Delete</string>
    <string name="track">track</string>
    <string name="marker">marker</string>
    <string name="closing_app_msg">Do you want close app?</string>
    <string name="you_are_here">You are here</string>
    <string name="enter_name_of_place">Marker name:</string>
    <string name="save_marker">Save marker</string>
    <string name="edit_marker">Edit marker</string>
    <string name="description">Marker description:</string>
    <string name="chose_marker_ic">Marker icon:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="server_monitoring_message_corect">Please complete all fields in the "Settings/Groups" correctly.</string>
    <string name="server_message_corect">Please complete fields "Server" and "Port" correctly.</string>
    <string name="warning_temporarily_suspended">Account has been temporarily suspended due to debts.</string>
    <string name="warning_key_has_not_access">This key have not access permission to account.</string>
    <string name="warning_have_not_group">Account have not group or this group have not devices.</string>
    <string name="warning_does_not_have_acces_to_device">Account doesn`t have access to the device.</string>
    <string name="key_left">Key left.</string>
    <string name="key_lifecycle_range_out">Key lifecycle range out.</string>
    <string name="account_id_is_not_valid">Account is not valid.</string>
    <string name="device_id_is_not_valid">Device is not valid.</string>
    <string name="status_error">No device data.</string>
    <string name="track_color">Track color:</string>
    <string name="track_width">Track width (px):</string>
    <string name="min_satelites">Min satellites:</string>
    <string name="min_speed">Min speed (km/h):</string>
    <string name="max_speed">Max speed (km/h):</string>
    <string name="addGroup">Add Group</string>
    <string name="save">Save</string>
    <string name="spisok_pust">List is empty</string>
    <string name="please_add_server_settings">Please, add server settings!</string>
    <string name="please_add_server_monitoring_settings">Please, add settings of the group!</string>
    <string name="edit">Edit</string>
    <string name="no_less_interval">Interval shouldn`t be less then 10 sec</string>
    <string name="incorrect_data">Interval field should consist of number</string>
    <string name="rlace_turn_oo_gps">Please, TURN ON GPS!</string>
    <string name="choose_group">Choose group of objects</string>
    <string name="confirm">Confirm</string>
    <string name="off">Off</string>
    <string name="enable_gps">For correct work please enable GPS</string>
    <string name="no_groups">There are no groups, please add it in "Objects monitoring"</string>
    <string name="delete_group">Deleting group?</string>
    <string name="group">group</string>
    <string name="descriptionObj">Description of object</string>
    <string name="brand">Brand of object</string>
    <string name="company">Organization</string>
    <string name="lastData">Last data</string>
    <string name="driver">Driver</string>
    <string name="trailer">Trailer</string>
    <string name="plate">Plate</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="satCount">Satellite count</string>
    <string name="fuelLevel">Fuel level</string>
    <string name="fuelExpense">Fuel expense</string>
    <string name="not_connected">To see objects list please connect to server</string>
    <string name="empty_object_list">List of objects is empty</string>
    <string name="empty_trips_list">List of trips is empty</string>
    <string name="information">Information</string>
    <string name="objectGroups">Object Groups</string>
    <string name="objectsGroup">Objects</string>
    <string name="object">Object</string>
    <string name="markers">Markers</string>
    <string name="sensorsToolbar">Sensors</string>
    <string name="tracksToolbar">Tracks</string>
    <string name="search">Search devices</string>
    <string name="labelParams">Enable labels</string>
    <string name="clusterParams">Enable clusters</string>
    <string name="geocoderParams">Enable geocoder</string>
    <string name="navigationParams">Enable navigation</string>
    <string name="changeLabelParams">Substitute names</string>
    <string name="drawLineParams">Shaw line</string>
    <string name="buttonsOfControlParams">Buttons of control</string>
    <string name="address">Address: </string>
    <string name="addressObjInfo">Address</string>
    <string name="Info">Info</string>
    <string name="Events">Events</string>
    <string name="Control">Control</string>
    <string name="Trips">Trips</string>
    <string name="Sensors">Sensors</string>
    <string name="Km">Km</string>
    <string name="KmH">Km/H</string>
    <string name="Hour">H</string>
    <string name="Min">Min</string>
    <string name="litres">l</string>
    <string name="celsium">\u00B0C</string>
    <string name="rpm">r/min</string>
    <string name="volts">V</string>
    <string name="acceleration">G</string>
    <string name="fuellingManual">Fuelling (manual)</string>
    <string name="drainManual">Drain (manual)</string>
    <string name="fuellingAuto">Fuelling (auto)</string>
    <string name="drainAuto">Drain (manual)</string>
    <string name="worksessionEndManual">End of work session (manual)</string>
    <string name="worksessionStartManual">Start of work session (manual)</string>
    <string name="worksessionEndVoyage">End of work session (voyage)</string>
    <string name="worksessionStartVoyage">Start of work session (voyage)</string>
    <string name="worksessionEndRfid">End of work session (RFID)</string>
    <string name="worksessionStartRfid">Start of work session (RFID)</string>
    <string name="temperatureInNorm">Enter temperature rate</string>
    <string name="temperatureOutNorm">Exit temperature limits</string>
    <string name="arrivalZone">Entrance to the geofence</string>
    <string name="departureZone">Exit geofence</string>
    <string name="speedZone">Speeding in geofence</string>
    <string name="serviceDayApproximation">Notifications have been sent about the near-term maintenance</string>
    <string name="serviceDayOverdue">Notifications have been sent about the prolongation of maintenance</string>
    <string name="speedOutOfRange">Notifications are sent for speed outside the range</string>
    <string name="speedInTheRange">A speed limit message has been sent within the range</string>
    <string name="maxSpeed">Notifications are sent at the maximum speed</string>
    <string name="loseCommunication">Sent notifications about loss of connection</string>
    <string name="loseCoordinates">Sent notifications about loss of coordinates</string>
    <string name="sensorChangeOn">A notification has been sent about changing the sensor value to on</string>
    <string name="sensorChangeOff">A notification has been sent about changing the value of the sensor to the off</string>
    <string name="sensorValueInTheRange">A notification has been sent about the value of the sensor within the range</string>
    <string name="sensorValueOutOfRange">An alert has been sent about the sensor value outside the range</string>
    <string name="chooseStatus">Please choose status</string>
    <string name="statusChanged">Status changed successfully</string>
    <string name="statusError">Status change error</string>
    <string name="noStatuses">There are no statuses for choosing</string>
    <string name="parking">Parking</string>
    <string name="status">Status:</string>
    <string name="finish_app">Do you want to close application?</string>
    <string name="group_name">Group name:</string>
    <string name="group_account">Account:</string>
    <string name="group_key">Key:</string>
    <string name="group_url">Request url:</string>
    <string name="group_interval">Request interval:</string>
    <string name="group_groups">Groups:</string>
    <string name="group_timezone">Timezone:</string>
    <string name="sensor0">Sensor 0</string>
    <string name="sensor1">Sensor 1</string>
    <string name="sensor2">Sensor 2</string>
    <string name="sensor3">Sensor 3</string>
    <string name="sensor4">Sensor 4</string>
    <string name="sensor5">Sensor 5</string>
    <string name="sensor0s">Sensor 0:</string>
    <string name="sensor1s">Sensor 1:</string>
    <string name="sensor2s">Sensor 2:</string>
    <string name="sensor3s">Sensor 3:</string>
    <string name="sensor4s">Sensor 4:</string>
    <string name="sensor5s">Sensor 5:</string>
    <string name="application_name">Application name:</string>
    <string name="build_version">Version:</string>
    <string name="author_site">Author site:</string>
    <string name="author_company">Author company:</string>
    <string name="microgis_site"><u>https://micro-gis.com/</u></string>
    <string name="support">Support:</string>
    <string name="support_email"><u>support@micro-gis.com</u></string>
    <string name="less_distance">Distance can`t be less then 100 m</string>
    <string name="less_time">Period can`t be less then 10 s</string>
    <string name="less_angle">Angle can`t be less then 10</string>
    <string name="screen_activity">Screen activity:</string>
    <string name="screen_activity_always">Always</string>
    <string name="screen_activity_while_charging">While charging</string>
    <string name="screen_activity_normal">Off</string>
    <string name="server_error">Server error</string>
    <string name="startTrack">Start</string>
    <string name="finishTrack">Finish</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="events">Events</string>
    <string name="route">Route</string>
    <string name="schedule">Schedule</string>
    <string name="incorrect_password">Incorrect password</string>
</resources>