<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBar"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/back_buttonAbout"
                    android:background="@drawable/ic_arrow_back_white_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about"
                    android:gravity = "center"
                    android:textColor="@color/white"
                    android:id="@+id/toolbar_title"
                    android:textSize="24dp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:text="@string/application_name"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_name"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:text="@string/build_version"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/build_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_company"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="MicroGIS™"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_site"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/author_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/microgis_site"
                android:textColor="@color/blue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_email"
                android:textColor="@color/blue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>