<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/back_buttonDriverLogin"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_arrow_back_white_24dp" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/driver"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/linearLayout3"
        app:layout_anchorGravity="left|center">

        <EditText
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password"
            android:layout_centerHorizontal="true"
            android:hint="@string/login"
            android:inputType="number" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/password"
            android:inputType="textWebPassword" />

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/login"
            android:layout_below="@+id/password"
            android:checked="true"
            android:text="@string/remember_me"
            android:layout_alignRight="@+id/login" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberMe"
            android:layout_centerHorizontal="true"
            android:text="@string/enter" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>